# distributed-shared-memory-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: dsm_config.json
src/: main.cpp
src/dsm/: blocking_queue.hpp  config.cpp  config.hpp  distributed_shared_variable.cpp  distributed_shared_variable.hpp  dsm.cpp  dsm.hpp  dsm_manager.cpp  dsm_manager.hpp  listener.cpp  listener.hpp  message.hpp  producer.cpp  producer.hpp
src/dsm/api/: dsm.cpp  dsm.hpp
src/dsm/config/: config.cpp  config.hpp
src/dsm/data_structures/: blocking_queue.hpp
src/dsm/manager/: dsm_manager.cpp  dsm_manager.hpp
src/dsm/messages/: message.hpp
src/dsm/promises/: promise_manager.cpp  promise_manager.hpp
src/dsm/threads/: blocking_queue.hpp  consumer.cpp  consumer.hpp  producer.cpp  producer.hpp
src/dsm/variables/: distributed_shared_variable.cpp  distributed_shared_variable.hpp
